--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
   "name": "null-carousel",
-  "version": "0.0.0"
+  "version": "0.0.0",
+  "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/NullIsObject/null-carousel.git"
+  }
 }
