--- a/package.json
+++ b/package.json
@@ -1,9 +1,23 @@
 {
   "name": "null-carousel",
   "version": "0.0.0",
+  "packageManager": "pnpm@8.14.1",
   "type": "module",
+  "private": true,
+  "scripts": {
+    "dist": "rollup -c"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/NullIsObject/null-carousel.git"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
+  "devDependencies": {
+    "@rollup/plugin-typescript": "^11.1.6",
+    "rollup": "^4.9.5",
+    "tslib": "^2.6.2"
   }
 }
