--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dist": "rollup -c"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "repository": {
     "type": "git",
@@ -16,10 +18,9 @@
     "npm": ">=8.0.0"
   },
   "devDependencies": {
-    "@rollup/plugin-typescript": "^11.1.6",
-    "rollup": "^4.9.5",
-    "rollup-plugin-vue": "^6.0.0",
-    "tslib": "^2.6.2",
+    "@types/node": "^20.11.5",
+    "@vitejs/plugin-vue2": "^2.3.1",
+    "vite": "^5.0.12",
     "vue": "^2"
   }
 }
