--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "unbuild",
     "preview": "vite preview"
   },
   "repository": {
@@ -17,9 +17,13 @@
     "node": ">=18.0.0",
     "npm": ">=8.0.0"
   },
+  "workspaces": [
+    "packages/*"
+  ],
   "devDependencies": {
     "@types/node": "^20.11.5",
     "@vitejs/plugin-vue2": "^2.3.1",
+    "unbuild": "^2.0.0",
     "vite": "^5.0.12",
     "vue": "^2"
   }
