--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "unbuild",
+    "build": "node --experimental-loader ts-node/esm ./build/index.ts",
     "preview": "vite preview"
   },
   "repository": {
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/node": "^20.11.5",
     "@vitejs/plugin-vue2": "^2.3.1",
+    "ts-node": "^10.9.2",
     "unbuild": "^2.0.0",
     "vite": "^5.0.12",
     "vue": "^2"
