--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "build": "pnpm run -C build build",
-    "build:vite": "vite build"
+    "build:packages": "pnpm run -C build build:packages"
   },
   "repository": {
     "type": "git",
@@ -20,11 +19,11 @@
     "@types/node": "^20.11.5",
     "@vitejs/plugin-vue2": "^2.3.1",
     "build": "workspace:*",
+    "jiti": "^1.21.0",
+    "less": "^4.2.0",
+    "mkdist": "^1.4.0",
     "packages": "workspace:*",
-    "rollup-plugin-dts": "^6.1.0",
-    "ts-node": "^10.9.2",
-    "unbuild": "^2.0.0",
-    "untyped": "^1.4.2",
+    "typescript": "^5.3.3",
     "vite": "^5.0.12",
     "vue": "^2"
   }
