--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,8 @@
     ],
     "removeComments": true,
     "strict": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "declaration": true,
+    "declarationDir": "dist/types"
   }
 }
