--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "less": "^4.2.0",
     "mkdist": "^1.4.0",
     "packages": "workspace:*",
+    "rollup-plugin-dts": "^6.1.0",
     "typescript": "^5.3.3",
     "vite": "^5.0.12",
     "vue": "^2"
