--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dist": "rollup -c"
+    "build": "pnpm run -C build build:packages"
   },
   "repository": {
     "type": "git",
@@ -16,16 +16,8 @@
     "npm": ">=8.0.0"
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@types/node": "^20.11.16",
     "build": "workspace:*",
-    "fs-extra": "^11.2.0",
-    "jiti": "^1.21.0",
-    "mkdist": "^1.4.0",
     "packages": "workspace:*",
-    "rollup": "^4.9.5",
-    "rollup-plugin-esbuild": "^6.1.1",
-    "rollup-plugin-vue": "5",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
     "vue": "^2"
