--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "packages": "workspace:*",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
-    "vue": "^2"
+    "vue": "workspace:*",
+    "vue2": "npm:vue@2",
+    "vue3": "npm:vue@^3.4.15"
   }
 }
