vue多版本打包

--- a/packages/package.json
+++ b/packages/package.json
@@ -2,5 +2,8 @@
   "name": "packages",
   "type": "module",
   "main": "index.ts",
-  "module": "index.ts"
+  "module": "index.ts",
+  "peerDependencies": {
+    "vue": ">=2.7.0"
+  }
 }
