--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "null-carousel",
   "version": "0.0.0",
+  "description": "A Carousel Component Library for Vue.js.",
   "packageManager": "pnpm@8.14.1",
   "type": "module",
   "private": true,
+  "license": "MIT",
   "scripts": {
     "build": "pnpm run -C build build:packages"
   },
@@ -22,6 +24,11 @@
     "typescript": "^5.3.3",
     "vue": "workspace:*",
     "vue2": "npm:vue@2",
-    "vue3": "npm:vue@^3.4.15"
-  }
+    "vue3": "npm:vue@^3.4.21"
+  },
+  "keywords": [
+    "carousel",
+    "vue",
+    "components"
+  ]
 }
