--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "removeComments": true,
     "strict": true,
     "moduleResolution": "node",
-    "declaration": true
+    "declaration": true,
+    "emitDeclarationOnly": true
   }
 }
