--- a/package.json
+++ b/package.json
@@ -17,18 +17,13 @@
     "node": ">=18.0.0",
     "npm": ">=8.0.0"
   },
-  "devDependencies": {
-    "build": "workspace:*",
-    "packages": "workspace:*",
-    "tslib": "^2.6.2",
-    "typescript": "^5.3.3",
-    "vue": "workspace:*",
-    "vue2": "npm:vue@2",
-    "vue3": "npm:vue@^3.4.21"
-  },
   "keywords": [
     "carousel",
     "vue",
     "components"
-  ]
+  ],
+  "devDependencies": {
+    "build": "workspace:*",
+    "packages": "workspace:*"
+  }
 }
