打包输出readme和package.json

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "components"
   ],
   "devDependencies": {
+    "root": "workspace:./",
     "build": "workspace:*",
     "packages": "workspace:*"
   }
