使用模块化vue-tsc打包

--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "components"
   ],
   "devDependencies": {
-    "root": "workspace:./",
     "build": "workspace:*",
-    "packages": "workspace:*"
+    "packages": "workspace:*",
+    "root": "workspace:./"
   }
 }
