--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "components"
   ],
   "devDependencies": {
-    "build": "workspace:*",
-    "packages": "workspace:*",
-    "root": "workspace:./"
+    "@null-carousel/build": "workspace:*",
+    "@null-carousel/packages": "workspace:*",
+    "@null-carousel/root": "workspace:./"
   }
 }
