--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -1,14 +1,16 @@
 {
-  "extends": [
-    "@null-carousel/build/tsconfig.base.json"
-  ],
   "include": [
     "./**/*.ts",
     "./**/*.d.ts",
     "./**/*.tsx",
     "./**/*.vue"
   ],
-  "exclude": [
-    "node_modules"
-  ]
+  "compilerOptions": {
+    "module": "ES6",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "moduleResolution": "node"
+  }
 }
