--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "build": "pnpm run -C build build:packages"
+    "build": "pnpm run -C build build:packages",
+    "dev": "pnpm run -C dev dev"
   },
   "repository": {
     "type": "git",
