--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "scripts": {
     "build": "pnpm run -C build build:packages",
-    "dev": "pnpm run -C dev dev"
+    "dev": "pnpm run -C dev start"
   },
   "repository": {
     "type": "git",
