--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "devDependencies": {
     "@null-carousel/build": "workspace:*",
     "@null-carousel/packages": "workspace:*",
-    "@null-carousel/root": "workspace:./"
+    "@null-carousel/root": "workspace:./",
+    "null-carousel": "workspace:./dist/packages",
+    "vue": "^3.4.23"
   }
 }
