DEV_PKG_NAME修改："@null-carousel/packages" -> "null-carousel"

--- a/packages/package.json
+++ b/packages/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "@null-carousel/packages",
+  "name": "null-carousel",
   "type": "module",
   "main": "index",
   "module": "index",
   "peerDependencies": {
     "vue": "^3.4.23"
+  },
+  "devDependencies": {
+    "null-carousel": "./"
   }
 }
