--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   ],
   "devDependencies": {
     "@null-carousel/build": "workspace:*",
-    "@null-carousel/packages": "workspace:*",
+    "null-carousel": "workspace:*",
     "@null-carousel/root": "workspace:./",
     "vue": "^3.4.23"
   }
