--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   ],
   "devDependencies": {
     "@null-carousel/build": "workspace:*",
-    "@null-carousel/root":  "workspace:./",
-    "null-carousel":  "workspace:*",
+    "@null-carousel/root": "link:",
+    "null-carousel": "workspace:*",
     "vue": "^3.4.23"
   }
 }
