--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -51,7 +51,11 @@ jobs:
             labels: ${{ steps.meta.outputs.labels }}
 
       # This step generates an artifact attestation for the image, which is an unforgeable statement about where and how it was built. It increases supply chain security for people who consume the image. For more information, see "[AUTOTITLE](/actions/security-guides/using-artifact-attestations-to-establish-provenance-for-builds)."
-      * 名称：生成项目证明 使用：actions/attest-build-provenance@v1 以及：   subject-name:
-          ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}   subject-digest:
-            ${{ steps.push.outputs.digest }}   push-to-registry: true
+          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
+          subject-digest:
+            ${{ steps.push.outputs.digest }}
+          push-to-registry: true
+        - name: build
+          env:
+            npm run orderlyBuild
 
