--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -56,6 +56,7 @@ jobs:
             ${{ steps.push.outputs.digest }}
           push-to-registry: true
         - name: build
+          uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
           env:
             npm run orderlyBuild
 
