--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -52,6 +52,6 @@ jobs:
 
         - name: build
           uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
-          env:
+          run:
             npm run orderlyBuild
 
