--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -15,6 +15,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Install and Build
         run: |
+          npm i -g pnpm
           pnpm i
           pnpm run orderlyBuild
       - name: Deploy
