--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -28,6 +28,9 @@ jobs:
           release_name: Release ${GITHUB_REF#refs/heads/}
           draft: false
           prerelease: false
+      - name: test
+        run: |
+          tree ./
       - name: Upload Release Asset
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
