--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -24,8 +24,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: tag-${{ github.name }}
-          release_name: Release ${{ github.name }}
+          tag_name: ${{ GITHUB_REF_NAME }}
+          release_name: Release ${{ GITHUB_REF_NAME }}
           draft: false
           prerelease: false
       - name: test
