--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -32,11 +32,6 @@ jobs:
           release_name: Release ${{ steps.extract_branch.outputs.branch }}
           draft: false
           prerelease: false
-
-      - name: test
-        run: |
-          tree ./
-
       - name: Upload Release Asset
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
@@ -44,6 +39,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/packages/null-carousel.zip
+          asset_path: null-carousel.zip
           asset_name: null-carousel.zip
           asset_content_type: application/zip
