--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -1,4 +1,4 @@
-name: GitHub Actions Build
+name: GitHub Actions Release
 on:
   push:
     branches:
@@ -17,7 +17,9 @@ jobs:
           pnpm run orderlyBuild
       - name: Zip project
         run: |
-          zip -jr null-carousel.zip dist/packages/null-carousel/
+          cd ./dist/packages
+          zip -r null-carousel.zip null-carousel/
+          cd ../../
       - name: Extract Branch Name
         id: extract_branch
         run: |  
@@ -39,6 +41,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: null-carousel.zip
+          asset_path: /dist/packages/null-carousel.zip
           asset_name: null-carousel.zip
           asset_content_type: application/zip
