--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -30,7 +30,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: tag-${{ steps.extract_branch.outputs.branch }}
+          tag_name: release-${{ steps.extract_branch.outputs.branch }}
           release_name: Release ${{ steps.extract_branch.outputs.branch }}
           draft: false
           prerelease: false
