--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -34,6 +34,11 @@ jobs:
           release_name: Release ${{ steps.extract_branch.outputs.branch }}
           draft: false
           prerelease: false
+
+      - name: Show Tree
+        run: |
+          tree ./
+
       - name: Upload Release Asset
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
