--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -46,6 +46,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: /dist/packages/null-carousel.zip
+          asset_path: ./dist/packages/null-carousel.zip
           asset_name: null-carousel.zip
           asset_content_type: application/zip
