--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -1,8 +1,8 @@
 name: GitHub Actions Release
 on:
   push:
-    branches:
-      - master
+    tags:
+      - *
 jobs:
   build:
     name: Upload Release Asset
