--- a/packages/null-carousel/package.json
+++ b/packages/null-carousel/package.json
@@ -7,6 +7,7 @@
     "vue": "^3.4.23"
   },
   "devDependencies": {
-    "null-carousel": "./"
+    "null-carousel": "./",
+    "vite": "^5.1.4"
   }
 }
