ts>=5.2时，ts.visitEachChild的context参数有默认值

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@null-carousel/build": "workspace:*",
     "@null-carousel/root": "link:",
     "null-carousel": "workspace:*",
+    "typescript": "^5.5.4",
     "vue": "^3.4.23"
   }
 }
