--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "build": "pnpm run -C build build:packages",
     "orderlyBuild": "pnpm run -C build build:packages_orderlyBuild",
-    "dev": "pnpm run -C packages/dev start"
+    "dev": "pnpm run -C packages/dev start",
+    "build_watch": "pnpm run -C build build:packages_watch_build"
   },
   "repository": {
     "type": "git",
